<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Goal_page">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/goals1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="378dp"
        android:layout_height="221dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.111">

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="169dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/calorie1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblGoalSteps_GP"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/click_to_add"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblGoalWeight_GP"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/click_to_add1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblGoalCalorie_GP"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/click_to_add2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/GP_ivBack"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginStart="-41dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#4863F8"
        android:contentDescription="Back"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>