<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <TextView
            android:id="@+id/textView51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reps1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtReps_AS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_reps"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddSet_AS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4863F8"
            android:text="@string/add_set1"
            app:cornerRadius="6dp"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnClose_AS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#003553F8"
            android:text="@string/close"
            android:textColor="#4863F8" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>