<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_goal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/rgGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_goal_title">

        <RadioButton
            android:id="@+id/rbLoseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/lose_weight" />

        <RadioButton
            android:id="@+id/rbGainWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gain_weight" />

    </RadioGroup>
    <TextView
        android:id="@+id/lblTimePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time_period_weeks"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rgGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekbarTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:max="52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTimePeriod" />

    <TextView
        android:id="@+id/lblSelectPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_period_0_weeks"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/seekbarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
