<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise_Summary">

    <TextView
        android:id="@+id/lblExerciseTitle_ES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="436dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblExerciseTitle_ES"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:id="@+id/textView57"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/exercise_type"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/lblType_ES"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/focused_body_parts"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblBodyPart_ES"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/difficulty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblDifficulty_ES"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblDescription_ES"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnStart_ES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4863F8"
            android:text="@string/start"
            app:cornerRadius="10dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnBack_ES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FF0000"
            android:text="@string/back"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>