<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/exerciselistbox"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblExerciseT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listData2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblExerciseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/listData"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnGo_EL"
                android:layout_width="100dp"
                android:layout_height="37dp"
                android:backgroundTint="#fff"
                android:insetLeft="10dp"
                android:text="@string/go"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/dumbell_icon" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>